stable/kroki/0.0.3/templates/template.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kroki
  labels:
    app.kubernetes.io/name: kroki
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: kroki
  template:
    metadata:
      name: kroki
      labels:
        app.kubernetes.io/name: kroki
    spec:
      containers:
        - name: kroki
          # https://hub.docker.com/u/yuzutech
          image: yuzutech/kroki:0.23.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              protocol: TCP
              containerPort: 8000
        - name: mermaid
          # https://hub.docker.com/u/yuzutech
          image: yuzutech/kroki-mermaid:0.23.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: mermaid-http
              protocol: TCP
              containerPort: 8002
---
apiVersion: v1
kind: Service
metadata:
  name: kroki
spec:
  #ipFamilyPolicy: SingleStack
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
  selector:
    app.kubernetes.io/name: kroki
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kroki
spec:
  rules:
    - host: kroki.bitheap.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kroki
                port:
                  name: http
